fiks stream operasjoner